test/compile_errors/err_unreachable_after_continue.w
//! expect-error: unreachable code

fn f():
    for x in 0..10:
        continue
        print("hi")
